--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 	<body>
 		<section data-role="wrapper">
 			<header data-role="page_header">
-				<h1>REPLACE ME</h1>
+				<h1>YOU ARE REPLACED</h1>
 				<nav>
 					<ul>
 						<li data-action="navigation" data-target="home">home</li>
